--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="grey_blue">#77a1b5</color>
+    <color name="color_hint">#292727</color>
+    <color name="color_buttons">#82A781</color>
+    <color name="shadow_button">#556449</color>
 </resources>
