--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -87,12 +87,13 @@
         />
 
     <Button
+        android:id="@+id/main_activity_forgot_password"
         android:layout_width="180dp"
         android:layout_height="40dp"
         android:layout_below="@id/main_activity_login_button"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
-        android:background=""
+        android:background="@android:color/transparent"
         android:fontFamily="monospace"
         android:text="@string/forgot_password"
         android:textAllCaps="false"
