--- a/app/src/main/res/layout/activity_new_password.xml
+++ b/app/src/main/res/layout/activity_new_password.xml
@@ -4,14 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background"
+    android:scaleType="center"
     tools:context=".NewPasswordActivity">
-
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scaleType="centerCrop"
-        android:src="@drawable/background"
-        />
 
     <ImageView
         android:id="@+id/new_password_activity_background_login"
@@ -23,12 +18,32 @@
         tools:ignore="MissingConstraints"
         />
 
+    <ImageButton
+        android:id="@+id/new_password_activity_activity_back"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
+        android:layout_alignStart="@id/new_password_activity_background_login"
+        android:layout_alignTop="@id/new_password_activity_background_login"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/back"
+        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
+
+    <ImageButton
+        android:id="@+id/new_password_activity_home"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:background="@drawable/home"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
+
     <EditText
         android:id="@+id/new_password_activity_password"
         android:layout_width="250dp"
         android:layout_height="60dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="70dp"
         android:layout_alignTop="@id/new_password_activity_background_login"
         android:background="@color/white"
         android:hint="@string/new_password"
@@ -80,7 +95,7 @@
         android:layout_alignStart="@id/new_password_done_button"
         android:layout_alignTop="@id/new_password_done_button"
         android:layout_marginTop="6dp"
-        app:cardCornerRadius="3dp"
+        app:cardCornerRadius="0dp"
         />
 
     <Button
@@ -94,6 +109,7 @@
         android:text="@string/done_button"
         android:textStyle="bold"
         android:textSize="17sp"
+        app:cornerRadius="0dp"
         />
 
 </RelativeLayout>
