--- a/app/src/main/res/layout/activity_new_password.xml
+++ b/app/src/main/res/layout/activity_new_password.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/background"
     android:scaleType="center"
-    tools:context=".NewPasswordActivity">
+    tools:context=".screens.NewPasswordActivity">
 
     <ImageView
         android:id="@+id/new_password_activity_background_login"
