[+] added feature start phone with +7; [+] added feature hide/show password

--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -64,6 +64,7 @@
         android:paddingStart="20dp"
         android:textColorHint="@color/color_hint"
         android:inputType="phone"
+        android:maxLines="12"
         />
 
     <androidx.cardview.widget.CardView
