--- a/app/src/main/res/layout/activity_new_password.xml
+++ b/app/src/main/res/layout/activity_new_password.xml
@@ -53,6 +53,7 @@
         />
 
     <ImageButton
+        android:id="@+id/new_password_button_eye1"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_alignEnd="@id/new_password_activity_password"
@@ -61,6 +62,7 @@
         android:layout_marginBottom="15dp"
         android:background="@drawable/icon_close_eye"
         android:alpha="0.7"
+        android:tag="1"
         tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
 
     <EditText
@@ -78,6 +80,7 @@
         />
 
     <ImageButton
+        android:id="@+id/new_password_button_eye2"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_alignEnd="@id/new_password_activity_repeat_password"
@@ -86,6 +89,7 @@
         android:layout_marginBottom="15dp"
         android:background="@drawable/icon_close_eye"
         android:alpha="0.7"
+        android:tag="1"
         tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
 
     <androidx.cardview.widget.CardView
