[+] added validation of all fields

--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -41,7 +41,7 @@
 
     <TextView
         android:id="@+id/forgot_activity_restore_password"
-        android:layout_width="250dp"
+        android:layout_width="wrap_content"
         android:layout_height="40dp"
         android:text="@string/restore_password"
         android:layout_alignTop="@id/forgot_activity_background_login"
@@ -52,20 +52,29 @@
         android:layout_marginTop="80dp"
         />
 
-    <EditText
+    <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/forgot_activity_phone"
-        android:layout_width="250dp"
-        android:layout_height="60dp"
-        android:layout_centerHorizontal="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="70dp"
         android:layout_alignTop="@id/forgot_activity_restore_password"
+        android:layout_centerHorizontal="true"
+        android:textColorHint="@color/color_hint"
+        app:errorEnabled="true"
+        app:errorIconDrawable="@android:color/transparent"
+        >
+
+    <com.google.android.material.textfield.TextInputEditText
+        android:id="@+id/forgot_activity_phone_text"
+        android:layout_width="250dp"
+        android:layout_height="60dp"
         android:background="@color/white"
         android:hint="@string/phone"
         android:paddingStart="20dp"
-        android:textColorHint="@color/color_hint"
         android:inputType="phone"
-        android:maxLines="12"
+        android:maxLength="12"
         />
+    </com.google.android.material.textfield.TextInputLayout>
 
     <androidx.cardview.widget.CardView
         android:layout_width="198dp"
@@ -81,7 +90,7 @@
         android:id="@+id/forgot_activity_get_button"
         android:layout_width="190dp"
         android:layout_height="60dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="30dp"
         android:layout_centerHorizontal="true"
         android:layout_below="@id/forgot_activity_phone"
         android:backgroundTint="@color/color_buttons"
