--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -12,11 +12,10 @@
         android:id="@+id/forgot_activity_background_login"
         android:layout_width="300dp"
         android:layout_height="400dp"
-        android:alpha="0.7"
         android:layout_centerInParent="true"
+        android:alpha="0.7"
         android:background="@color/grey_blue"
-        tools:ignore="MissingConstraints"
-        />
+        tools:ignore="MissingConstraints" />
 
     <ImageButton
         android:id="@+id/forgot_activity_back"
