--- a/app/src/main/res/layout/activity_make_room.xml
+++ b/app/src/main/res/layout/activity_make_room.xml
@@ -5,28 +5,57 @@
     android:layout_height="match_parent"
     android:background="@drawable/background">
 
+    <ImageButton
+        android:id="@+id/personal_area_home"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:background="@drawable/home"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp">
+    </ImageButton>
+
     <ImageView
         android:id="@+id/make_room_background"
         android:layout_width="300dp"
         android:layout_height="270dp"
-        android:background="@color/grey_blue"
         android:layout_centerInParent="true"
-        android:alpha="0.7">
+        android:alpha="0.7"
+        android:background="@color/grey_blue">
     </ImageView>
 
-    <TextView
+    <ImageButton
+        android:id="@+id/make_room_back"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
+        android:layout_alignStart="@+id/make_room_background"
+        android:layout_alignTop="@+id/make_room_background"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/back">
+    </ImageButton>
+
+    <EditText
         android:id="@+id/make_room_password"
         android:layout_width="250dp"
         android:layout_height="60dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="70dp"
         android:layout_alignTop="@id/make_room_background"
         android:background="@color/white"
         android:hint="@string/password"
-        android:textColorHint="@color/color_hint"
-        android:textSize="15sp"
-        android:paddingStart="20dp">
-    </TextView>
+        android:paddingStart="20dp"
+        android:textColorHint="@color/color_hint">
+    </EditText>
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="258dp"
+        android:layout_height="70dp"
+        android:backgroundTint="@color/shadow_button"
+        android:layout_alignStart="@+id/personal_area_teacher_make_room"
+        android:layout_alignTop="@+id/personal_area_teacher_make_room"
+        android:layout_marginTop="6dp"
+        app:cardCornerRadius="0dp"
+        />
 
     <Button
         android:id="@+id/personal_area_teacher_make_room"
@@ -41,5 +70,7 @@
         android:textStyle="bold"
         app:cornerRadius="0dp">
     </Button>
+
+
 
 </RelativeLayout>
