--- a/app/src/main/res/layout/activity_personal_area_teacher.xml
+++ b/app/src/main/res/layout/activity_personal_area_teacher.xml
@@ -7,9 +7,9 @@
 
     <ImageButton
         android:id="@+id/personal_area_home"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
-        android:background="@drawable/home"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:background="@drawable/exit"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp">
     </ImageButton>
@@ -22,12 +22,13 @@
         android:layout_centerInParent="true"
         android:layout_marginTop="80dp"
         android:alpha="0.7"
-        android:background="@color/grey_blue"></ImageView>
+        android:background="@color/grey_blue">
+    </ImageView>
 
     <ImageView
         android:id="@+id/personal_area_teacher_buttons"
         android:layout_width="300dp"
-        android:layout_height="485dp"
+        android:layout_height="445dp"
         android:layout_below="@id/personal_area_teacher_name"
         android:layout_centerInParent="true"
         android:layout_marginTop="15dp"
@@ -35,16 +36,15 @@
         android:background="@color/grey_blue">
     </ImageView>
 
-    <ImageButton
-        android:id="@+id/personal_area_teacher_back"
-        android:layout_width="35dp"
-        android:layout_height="35dp"
-        android:layout_alignStart="@id/personal_area_teacher_buttons"
-        android:layout_alignTop="@id/personal_area_teacher_buttons"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/back">
-    </ImageButton>
+    <androidx.cardview.widget.CardView
+        android:layout_width="258dp"
+        android:layout_height="70dp"
+        android:backgroundTint="@color/shadow_button"
+        android:layout_alignStart="@+id/personal_area_teacher_make_room"
+        android:layout_alignTop="@+id/personal_area_teacher_make_room"
+        android:layout_marginTop="6dp"
+        app:cardCornerRadius="0dp"
+        />
 
     <Button
         android:id="@+id/personal_area_teacher_make_room"
@@ -52,14 +52,23 @@
         android:layout_height="70dp"
         android:layout_alignTop="@id/personal_area_teacher_buttons"
         android:layout_centerInParent="true"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="15dp"
         android:backgroundTint="@color/color_buttons"
         android:text="@string/make_room"
+        android:textColor="@color/white"
         android:textSize="17sp"
         android:textStyle="bold"
-        android:textColor="@color/white"
-        app:cornerRadius="0dp">
-    </Button>
+        app:cornerRadius="0dp"></Button>
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="258dp"
+        android:layout_height="70dp"
+        android:backgroundTint="@color/shadow_button"
+        android:layout_alignStart="@+id/personal_area_teacher_list_tasks"
+        android:layout_alignTop="@+id/personal_area_teacher_list_tasks"
+        android:layout_marginTop="6dp"
+        app:cardCornerRadius="0dp"
+        />
 
     <Button
         android:id="@+id/personal_area_teacher_list_tasks"
@@ -76,6 +85,16 @@
         app:cornerRadius="0dp">
     </Button>
 
+    <androidx.cardview.widget.CardView
+        android:layout_width="258dp"
+        android:layout_height="70dp"
+        android:backgroundTint="@color/shadow_button"
+        android:layout_alignStart="@+id/personal_area_teacher_regulations_game"
+        android:layout_alignTop="@+id/personal_area_teacher_regulations_game"
+        android:layout_marginTop="6dp"
+        app:cardCornerRadius="0dp"
+        />
+
     <Button
         android:id="@+id/personal_area_teacher_regulations_game"
         android:layout_width="250dp"
@@ -91,6 +110,16 @@
         app:cornerRadius="0dp">
     </Button>
 
+    <androidx.cardview.widget.CardView
+        android:layout_width="258dp"
+        android:layout_height="70dp"
+        android:backgroundTint="@color/shadow_button"
+        android:layout_alignStart="@+id/personal_area_teacher_settings"
+        android:layout_alignTop="@+id/personal_area_teacher_settings"
+        android:layout_marginTop="6dp"
+        app:cardCornerRadius="0dp"
+        />
+
     <Button
         android:id="@+id/personal_area_teacher_settings"
         android:layout_width="250dp"
@@ -105,6 +134,16 @@
         android:textColor="@color/white"
         app:cornerRadius="0dp">
     </Button>
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="258dp"
+        android:layout_height="70dp"
+        android:backgroundTint="@color/shadow_button"
+        android:layout_alignStart="@+id/personal_area_teacher_exit"
+        android:layout_alignTop="@+id/personal_area_teacher_exit"
+        android:layout_marginTop="6dp"
+        app:cardCornerRadius="0dp"
+        />
 
     <Button
         android:id="@+id/personal_area_teacher_exit"
