--- a/app/src/main/res/layout/activity_settings_teacher.xml
+++ b/app/src/main/res/layout/activity_settings_teacher.xml
@@ -14,6 +14,16 @@
         android:alpha="0.7">
     </ImageView>
 
+    <androidx.cardview.widget.CardView
+        android:layout_width="258dp"
+        android:layout_height="70dp"
+        android:backgroundTint="@color/shadow_button"
+        android:layout_alignStart="@+id/settings_teacher_choose_character"
+        android:layout_alignTop="@+id/settings_teacher_choose_character"
+        android:layout_marginTop="6dp"
+        app:cardCornerRadius="0dp"
+        />
+
     <Button
         android:id="@+id/settings_teacher_choose_character"
         android:layout_width="250dp"
@@ -28,6 +38,16 @@
         app:cornerRadius="0dp">
     </Button>
 
+    <androidx.cardview.widget.CardView
+        android:layout_width="258dp"
+        android:layout_height="70dp"
+        android:backgroundTint="@color/shadow_button"
+        android:layout_alignStart="@+id/settings_teacher_change_data"
+        android:layout_alignTop="@+id/settings_teacher_change_data"
+        android:layout_marginTop="6dp"
+        app:cardCornerRadius="0dp"
+        />
+
     <Button
         android:id="@+id/settings_teacher_change_data"
         android:layout_width="250dp"
@@ -41,6 +61,16 @@
         android:textSize="17sp"
         app:cornerRadius="0dp">
     </Button>
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="258dp"
+        android:layout_height="70dp"
+        android:backgroundTint="@color/shadow_button"
+        android:layout_alignStart="@+id/settings_teacher_statistics"
+        android:layout_alignTop="@+id/settings_teacher_statistics"
+        android:layout_marginTop="6dp"
+        app:cardCornerRadius="0dp"
+        />
 
     <Button
         android:id="@+id/settings_teacher_statistics"
