--- a/app/src/main/res/layout/activity_personal_area_student.xml
+++ b/app/src/main/res/layout/activity_personal_area_student.xml
@@ -1,17 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background">
 
     <ImageButton
-        android:id="@+id/personal_area_home"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
-        android:background="@drawable/home"
+        android:id="@+id/personal_area_logout"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp">
+        android:layout_marginTop="10dp"
+        android:background="@drawable/exit"
+        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck">
     </ImageButton>
 
     <ImageView
