--- a/app/src/main/res/layout/activity_personal_area_student.xml
+++ b/app/src/main/res/layout/activity_personal_area_student.xml
@@ -7,7 +7,7 @@
     android:background="@drawable/background">
 
     <ImageButton
-        android:id="@+id/personal_area_logout"
+        android:id="@+id/personal_area_student_logout"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_marginStart="10dp"
@@ -17,25 +17,75 @@
     </ImageButton>
 
     <ImageView
-        android:id="@+id/personal_area_student_name"
-        android:layout_width="300dp"
-        android:layout_height="100dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerInParent="true"
-        android:layout_marginTop="110dp"
-        android:alpha="0.7"
-        android:background="@color/grey_blue">
-    </ImageView>
-
-    <ImageView
         android:id="@+id/personal_area_student_buttons"
         android:layout_width="300dp"
-        android:layout_height="365dp"
-        android:layout_below="@id/personal_area_student_name"
-        android:layout_centerInParent="true"
-        android:layout_marginTop="15dp"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@id/personal_area_student_hero"
+        android:layout_alignBottom="@id/personal_area_student_settings_shadow"
+        android:layout_marginBottom="-15dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="30dp"
         android:alpha="0.7"
-        android:background="@color/grey_blue"></ImageView>
+        android:background="@color/grey_blue" />
+
+
+    <ImageButton
+        android:id="@+id/personal_area_student_hero"
+        android:layout_width="140dp"
+        android:layout_height="130dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="90dp"
+        android:layout_marginBottom="5dp"
+        android:background="@drawable/feiry"
+        tools:ignore="SpeakableTextPresentCheck"
+        />
+
+    <TextView
+        android:id="@+id/personal_area_student_name"
+        android:layout_width="300dp"
+        android:layout_height="40dp"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/personal_area_student_hero"
+        android:layout_marginTop="5dp"
+        android:textColor="@color/white"
+        android:textSize="30sp"
+        android:gravity="center_horizontal"
+        android:letterSpacing="0.07"
+        android:textStyle="bold"
+        android:text=""
+        >
+    </TextView>
+
+    <TextView
+        android:id="@+id/personal_area_student_last_name"
+        android:layout_width="300dp"
+        android:layout_height="40dp"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/personal_area_student_name"
+        android:textColor="@color/white"
+        android:textSize="30sp"
+        android:gravity="center_horizontal"
+        android:layout_marginTop="-10dp"
+        android:letterSpacing="0.07"
+        android:textStyle="bold"
+        android:text=""
+        >
+    </TextView>
+
+    <TextView
+        android:id="@+id/personal_area_student_area"
+        android:layout_width="wrap_content"
+        android:layout_height="30dp"
+        android:layout_centerHorizontal="true"
+        android:textColor="@color/white"
+        android:layout_marginTop="10dp"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:gravity="center_horizontal"
+        android:letterSpacing="0.07"
+        android:text="@string/personal_area"
+        >
+    </TextView>
 
     <androidx.cardview.widget.CardView
         android:layout_width="258dp"
@@ -51,14 +101,14 @@
         android:id="@+id/personal_area_student_play"
         android:layout_width="250dp"
         android:layout_height="70dp"
-        android:layout_alignTop="@id/personal_area_student_buttons"
+        android:layout_below="@id/personal_area_student_last_name"
         android:layout_centerInParent="true"
         android:layout_marginTop="15dp"
         android:backgroundTint="@color/color_buttons"
         android:text="@string/play"
         android:textSize="17sp"
         android:textStyle="bold"
-        app:cornerRadius="0dp"></Button>
+        app:cornerRadius="0dp" />
 
     <androidx.cardview.widget.CardView
         android:layout_width="258dp"
@@ -79,12 +129,12 @@
         android:layout_marginTop="15dp"
         android:backgroundTint="@color/color_buttons"
         android:text="@string/regulations_game"
-        android:textStyle="bold"
         android:textSize="17sp"
-        app:cornerRadius="0dp">
-    </Button>
+        android:textStyle="bold"
+        app:cornerRadius="0dp" />
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/personal_area_student_settings_shadow"
         android:layout_width="258dp"
         android:layout_height="70dp"
         android:backgroundTint="@color/shadow_button"
@@ -98,38 +148,13 @@
         android:id="@+id/personal_area_student_settings"
         android:layout_width="250dp"
         android:layout_height="70dp"
-        android:layout_below="@+id/personal_area_student_regulations_game"
-        android:layout_centerInParent="true"
+        android:layout_below="@id/personal_area_student_regulations_game"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="15dp"
         android:backgroundTint="@color/color_buttons"
         android:text="@string/settings"
-        android:textStyle="bold"
         android:textSize="17sp"
-        app:cornerRadius="0dp">
-    </Button>
-
-    <androidx.cardview.widget.CardView
-        android:layout_width="258dp"
-        android:layout_height="70dp"
-        android:backgroundTint="@color/shadow_button"
-        android:layout_alignStart="@+id/personal_area_student_exit"
-        android:layout_alignTop="@+id/personal_area_student_exit"
-        android:layout_marginTop="6dp"
-        app:cardCornerRadius="0dp"
-        />
-
-    <Button
-        android:id="@+id/personal_area_student_exit"
-        android:layout_width="250dp"
-        android:layout_height="70dp"
-        android:layout_below="@+id/personal_area_student_settings"
-        android:layout_centerInParent="true"
-        android:layout_marginTop="15dp"
-        android:backgroundTint="@color/color_buttons"
-        android:text="@string/exit"
         android:textStyle="bold"
-        android:textSize="17sp"
-        app:cornerRadius="0dp">
-    </Button>
+        app:cornerRadius="0dp" />
 
 </RelativeLayout>
