--- a/app/src/main/res/layout/activity_personal_area_teacher.xml
+++ b/app/src/main/res/layout/activity_personal_area_teacher.xml
@@ -7,37 +7,101 @@
     android:background="@drawable/background">
 
     <ImageButton
-        android:id="@+id/personal_area_logout"
+        android:id="@+id/personal_area_teacher_logout"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
         android:background="@drawable/exit"
         tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck">
-
     </ImageButton>
 
-    <ImageView
-        android:id="@+id/personal_area_teacher_name"
-        android:layout_width="300dp"
-        android:layout_height="100dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerInParent="true"
-        android:layout_marginTop="80dp"
-        android:alpha="0.7"
-        android:background="@color/grey_blue">
-    </ImageView>
+    <TextView
+        android:id="@+id/personal_area_teacher_area"
+        android:layout_width="wrap_content"
+        android:layout_height="30dp"
+        android:layout_centerHorizontal="true"
+        android:textColor="@color/white"
+        android:layout_marginTop="10dp"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:gravity="center_horizontal"
+        android:letterSpacing="0.07"
+        android:text="@string/personal_area"
+        >
+    </TextView>
 
     <ImageView
         android:id="@+id/personal_area_teacher_buttons"
         android:layout_width="300dp"
-        android:layout_height="445dp"
-        android:layout_below="@id/personal_area_teacher_name"
+        android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="30dp"
+        android:layout_alignTop="@id/personal_area_teacher_hero"
+        android:layout_alignBottom="@id/personal_area_teacher_settings_shadow"
+        android:layout_marginBottom="-12dp"
         android:alpha="0.7"
         android:background="@color/grey_blue">
     </ImageView>
+
+    <ImageButton
+        android:id="@+id/personal_area_teacher_hero"
+        android:layout_width="140dp"
+        android:layout_height="130dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="90dp"
+        android:layout_marginBottom="5dp"
+        android:background="@drawable/feiry"
+        tools:ignore="SpeakableTextPresentCheck"
+        />
+
+    <TextView
+        android:id="@+id/personal_area_teacher_last_name"
+        android:layout_width="300dp"
+        android:layout_height="35dp"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/personal_area_teacher_hero"
+        android:textColor="@color/white"
+        android:textSize="25sp"
+        android:gravity="center_horizontal"
+        android:layout_marginTop="5dp"
+        android:letterSpacing="0.07"
+        android:textStyle="bold"
+        android:text=""
+        >
+    </TextView>
+
+    <TextView
+        android:id="@+id/personal_area_teacher_name"
+        android:layout_width="300dp"
+        android:layout_height="35dp"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/personal_area_teacher_last_name"
+        android:layout_marginTop="-10dp"
+        android:textColor="@color/white"
+        android:textSize="25sp"
+        android:gravity="center_horizontal"
+        android:letterSpacing="0.07"
+        android:textStyle="bold"
+        android:text=""
+        >
+    </TextView>
+
+    <TextView
+        android:id="@+id/personal_area_teacher_patronymic"
+        android:layout_width="300dp"
+        android:layout_height="35dp"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/personal_area_teacher_name"
+        android:layout_marginTop="-10dp"
+        android:textColor="@color/white"
+        android:textSize="25sp"
+        android:gravity="center_horizontal"
+        android:letterSpacing="0.07"
+        android:textStyle="bold"
+        android:text=""
+        >
+    </TextView>
 
     <androidx.cardview.widget.CardView
         android:layout_width="258dp"
@@ -53,7 +117,7 @@
         android:id="@+id/personal_area_teacher_make_room"
         android:layout_width="250dp"
         android:layout_height="70dp"
-        android:layout_alignTop="@id/personal_area_teacher_buttons"
+        android:layout_below="@id/personal_area_teacher_patronymic"
         android:layout_centerInParent="true"
         android:layout_marginTop="15dp"
         android:backgroundTint="@color/color_buttons"
@@ -61,8 +125,7 @@
         android:textColor="@color/white"
         android:textSize="17sp"
         android:textStyle="bold"
-        app:cornerRadius="0dp">
-    </Button>
+        app:cornerRadius="0dp" />
 
     <androidx.cardview.widget.CardView
         android:layout_width="258dp"
@@ -115,6 +178,7 @@
     </Button>
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/personal_area_teacher_settings_shadow"
         android:layout_width="258dp"
         android:layout_height="70dp"
         android:backgroundTint="@color/shadow_button"
@@ -133,35 +197,10 @@
         android:layout_marginTop="15dp"
         android:backgroundTint="@color/color_buttons"
         android:text="@string/settings"
-        android:textStyle="bold"
-        android:textSize="17sp"
-        android:textColor="@color/white"
-        app:cornerRadius="0dp">
-    </Button>
-
-    <androidx.cardview.widget.CardView
-        android:layout_width="258dp"
-        android:layout_height="70dp"
-        android:backgroundTint="@color/shadow_button"
-        android:layout_alignStart="@+id/personal_area_teacher_exit"
-        android:layout_alignTop="@+id/personal_area_teacher_exit"
-        android:layout_marginTop="6dp"
-        app:cardCornerRadius="0dp"
-        />
-
-    <Button
-        android:id="@+id/personal_area_teacher_exit"
-        android:layout_width="250dp"
-        android:layout_height="70dp"
-        android:layout_below="@+id/personal_area_teacher_settings"
-        android:layout_centerInParent="true"
-        android:layout_marginTop="15dp"
-        android:backgroundTint="@color/color_buttons"
-        android:text="@string/exit"
-        android:textStyle="bold"
         android:textColor="@color/white"
         android:textSize="17sp"
-        app:cornerRadius="0dp">
-    </Button>
+        android:textStyle="bold"
+        app:cornerRadius="0dp" />
+
 
 </RelativeLayout>
