--- a/app/src/main/res/layout/activity_personal_area_student.xml
+++ b/app/src/main/res/layout/activity_personal_area_student.xml
@@ -16,12 +16,22 @@
         tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck">
     </ImageButton>
 
+    <ImageButton
+        android:id="@+id/personal_area_student_settings"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:background="@drawable/menu"
+        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
+
     <ImageView
         android:id="@+id/personal_area_student_buttons"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_alignTop="@id/personal_area_student_hero"
-        android:layout_alignBottom="@id/personal_area_student_settings_shadow"
+        android:layout_alignBottom="@id/personal_area_student_regulations_game_shadow"
         android:layout_marginBottom="-15dp"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="30dp"
@@ -34,7 +44,7 @@
         android:layout_width="140dp"
         android:layout_height="130dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="90dp"
+        android:layout_marginTop="120dp"
         android:layout_marginBottom="5dp"
         android:background="@drawable/feiry"
         tools:ignore="SpeakableTextPresentCheck"
@@ -111,6 +121,7 @@
         app:cornerRadius="0dp" />
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/personal_area_student_regulations_game_shadow"
         android:layout_width="258dp"
         android:layout_height="70dp"
         android:backgroundTint="@color/shadow_button"
@@ -129,30 +140,6 @@
         android:layout_marginTop="15dp"
         android:backgroundTint="@color/color_buttons"
         android:text="@string/regulations_game"
-        android:textSize="17sp"
-        android:textStyle="bold"
-        app:cornerRadius="0dp" />
-
-    <androidx.cardview.widget.CardView
-        android:id="@+id/personal_area_student_settings_shadow"
-        android:layout_width="258dp"
-        android:layout_height="70dp"
-        android:backgroundTint="@color/shadow_button"
-        android:layout_alignStart="@+id/personal_area_student_settings"
-        android:layout_alignTop="@+id/personal_area_student_settings"
-        android:layout_marginTop="6dp"
-        app:cardCornerRadius="0dp"
-        />
-
-    <Button
-        android:id="@+id/personal_area_student_settings"
-        android:layout_width="250dp"
-        android:layout_height="70dp"
-        android:layout_below="@id/personal_area_student_regulations_game"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="15dp"
-        android:backgroundTint="@color/color_buttons"
-        android:text="@string/settings"
         android:textSize="17sp"
         android:textStyle="bold"
         app:cornerRadius="0dp" />
