--- a/app/src/main/res/layout/activity_personal_area_teacher.xml
+++ b/app/src/main/res/layout/activity_personal_area_teacher.xml
@@ -31,6 +31,16 @@
         >
     </TextView>
 
+    <ImageButton
+        android:id="@+id/personal_area_teacher_settings"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:background="@drawable/menu"
+        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
+
     <ImageView
         android:id="@+id/personal_area_teacher_buttons"
         android:layout_width="300dp"
@@ -38,7 +48,7 @@
         android:layout_centerInParent="true"
         android:layout_marginTop="30dp"
         android:layout_alignTop="@id/personal_area_teacher_hero"
-        android:layout_alignBottom="@id/personal_area_teacher_settings_shadow"
+        android:layout_alignBottom="@id/personal_area_teacher_regulations_game_shadow"
         android:layout_marginBottom="-12dp"
         android:alpha="0.7"
         android:background="@color/grey_blue">
@@ -153,6 +163,7 @@
     </Button>
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/personal_area_teacher_regulations_game_shadow"
         android:layout_width="258dp"
         android:layout_height="70dp"
         android:backgroundTint="@color/shadow_button"
@@ -176,31 +187,5 @@
         android:textColor="@color/white"
         app:cornerRadius="0dp">
     </Button>
-
-    <androidx.cardview.widget.CardView
-        android:id="@+id/personal_area_teacher_settings_shadow"
-        android:layout_width="258dp"
-        android:layout_height="70dp"
-        android:backgroundTint="@color/shadow_button"
-        android:layout_alignStart="@+id/personal_area_teacher_settings"
-        android:layout_alignTop="@+id/personal_area_teacher_settings"
-        android:layout_marginTop="6dp"
-        app:cardCornerRadius="0dp"
-        />
-
-    <Button
-        android:id="@+id/personal_area_teacher_settings"
-        android:layout_width="250dp"
-        android:layout_height="70dp"
-        android:layout_below="@id/personal_area_teacher_regulations_game"
-        android:layout_centerInParent="true"
-        android:layout_marginTop="15dp"
-        android:backgroundTint="@color/color_buttons"
-        android:text="@string/settings"
-        android:textColor="@color/white"
-        android:textSize="17sp"
-        android:textStyle="bold"
-        app:cornerRadius="0dp" />
-
 
 </RelativeLayout>
