--- a/app/src/main/res/layout/window_change_password.xml
+++ b/app/src/main/res/layout/window_change_password.xml
@@ -65,8 +65,9 @@
             android:maxLength="15"
             android:paddingStart="10dp"
             android:paddingEnd="10dp"
-            android:textSize="16sp"
+            android:textSize="14sp"
             android:textColor="@color/white"
+            android:fontFamily="@font/minecraftia_regular"
             tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -122,8 +123,9 @@
             android:maxLength="15"
             android:paddingStart="10dp"
             android:paddingEnd="10dp"
-            android:textSize="16sp"
+            android:textSize="14sp"
             android:textColor="@color/white"
+            android:fontFamily="@font/minecraftia_regular"
             tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -180,8 +182,9 @@
             android:maxLength="15"
             android:paddingStart="10dp"
             android:paddingEnd="10dp"
-            android:textSize="16sp"
+            android:textSize="14sp"
             android:textColor="@color/white"
+            android:fontFamily="@font/minecraftia_regular"
             tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
     </com.google.android.material.textfield.TextInputLayout>
 
